Update bug hidden overflow

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,5 +1,9 @@
 * {
     position: relative;
+} 
+
+.vertical_space{
+    line-height: 29px;
 }
 
 .shadow-tipis{
