--- a/public/css/sideBar.css
+++ b/public/css/sideBar.css
@@ -49,7 +49,8 @@ a {
 .header_toggle {
     color: var(--first-color);
     font-size: 1.5rem;
-    cursor: pointer
+    cursor: pointer;
+    margin-left: -12px;
 }
 
 .l-navbar {
